feat: add create-zorakit

--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "rainbowkit",
+  "name": "zorakit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "postinstall": "husky install",
     "dev": "pnpm --recursive --parallel --filter \"!*-app\" dev",
-    "dev:lib": "pnpm --filter @rainbow-me/rainbowkit dev",
+    "dev:lib": "pnpm --filter zorakit dev",
     "dev:example": "pnpm dev:lib & pnpm --filter example dev",
     "dev:site": "pnpm dev:lib & pnpm --filter site dev",
-    "dev:cli": "pnpm --filter @rainbow-me/create-rainbowkit dev",
-    "dev:template:next-app": "pnpm --filter rainbowkit-next-app dev",
+    "dev:cli": "pnpm --filter create-zorakit dev",
+    "dev:template:next-app": "pnpm --filter zorakit-next-app dev",
     "build": "pnpm --recursive --parallel --filter \"!*-app\" build",
     "start": "pnpm dev",
     "lint": "eslint . --ext=js,jsx,mjs,ts,cjs,tsx && pnpm format:check && pnpm --recursive typecheck",
     "lint:fix": "eslint . --ext=js,jsx,mjs,ts,cjs,tsx --fix && pnpm format:fix",
     "format:check": "prettier --check \"./**/*.{ts,js,jsx,mjs,cjs,md,mdx,tsx}\"",
     "format:fix": "prettier --write \"./**/*.{ts,js,jsx,mjs,cjs,md,mdx,tsx}\"",
-    "link:cli": "cd packages/create-rainbowkit && pnpm link --global",
+    "link:cli": "cd packages/create-zorakit && pnpm link --global",
     "test": "pnpm test:unit",
     "test:unit": "vitest",
     "test:update": "vitest --update",
     "test:watch": "vitest --watch",
-    "test:cli": "pnpm --filter @rainbow-me/create-rainbowkit test:build",
-    "test:cli:dev": "pnpm --filter @rainbow-me/create-rainbowkit test:dev",
-    "test:cli:clean": "rm -rf ./packages/create-rainbowkit/generated-test-app",
+    "test:cli": "pnpm --filter create-zorakit test:build",
+    "test:cli:dev": "pnpm --filter create-zorakit test:dev",
+    "test:cli:clean": "rm -rf ./packages/create-zorakit/generated-test-app",
     "changeset": "changeset",
-    "clean": "rm -rf ./packages/rainbowkit/dist && rm -rf ./packages/rainbowkit/node_modules && rm -rf ./packages/create-rainbowkit/dist && pnpm install",
+    "clean": "rm -rf ./packages/zorakit/dist && rm -rf ./packages/zorakit/node_modules && rm -rf ./packages/create-zorakit/dist && pnpm install",
     "release": "pnpm release:verify-git && pnpm release:build && changeset publish",
     "release:verify-git": "git diff --exit-code && git rev-parse --abbrev-ref HEAD | grep \"main\"",
-    "release:build": "pnpm clean && pnpm lint && pnpm test && MINIFY_CSS=true pnpm --recursive --parallel --filter \"!*-app\" build && cp README.md packages/rainbowkit/README.md",
+    "release:build": "pnpm clean && pnpm lint && pnpm test && MINIFY_CSS=true pnpm --recursive --parallel --filter \"!*-app\" build && cp README.md packages/zorakit/README.md",
     "release:test": "pnpm release:build && pnpm --filter example dev",
-    "ci:example": "pnpm --filter=@rainbow-me/rainbowkit prepare && pnpm --filter=example build",
-    "ci:site": "pnpm --filter=@rainbow-me/rainbowkit prepare && pnpm --filter=site build"
+    "ci:example": "pnpm --filter=zorakit prepare && pnpm --filter=example build",
+    "ci:site": "pnpm --filter=zorakit prepare && pnpm --filter=site build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rainbow-me/rainbowkit.git"
+    "url": "git+https://github.com/rainbow-me/zorakit.git"
   },
   "license": "MIT",
   "devDependencies": {
