chore: update package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "zorakit",
+  "author": {
+    "name": "Benjamin Schachter"
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
